--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -534,7 +534,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Nepřátelské armády se objevují na náhodném Poli s Obeliskem (použijte miniatury Hrdinů z frakcí, které nejsou ve hře).\n"
+"  \\item Nepřátelské armády se objevují na náhodném Poli s Obeliskem (použijte miniatury Hrdinů z Frakcí, které nejsou ve hře).\n"
 "  \\item Určete Pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Sever\n"
