--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -445,14 +445,14 @@ msgstr ""
 "který zasáhne tři Jednotky v řadě. Jednotka přímo zasažená uprostřed utrpí "
 "plné poškození, zatímco Jednotky po obou stranách utrpí o 3\\,\\svg{damage-"
 "red} méně. \\item Kus brnění, štítu nebo oblečení: Drak získá 3\\,"
-"\\svg{defense}, což je znázorněno náhradními Kostičkami Frakce. Odstraňte "
-"je poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
+"\\svg{defense}, což je znázorněno náhradními Kostičkami Frakce. Odstraňte je "
+"poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
 "ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
-"následek, že každá Jednotka se pohybuje pouze o 1 Pole za Kolo, "
-"zatímco Azurový Drak může letět na jakékoli Pole na Desce Bojiště. "
-"\\end{itemize} \\item Azurový Drak je imunní vůči všem Kouzlům seslaným "
-"proti němu. \\item Posílení a vylepšení seslaná na Jednotky hráče zůstávají "
-"účinná. \\end{itemize} }"
+"následek, že každá Jednotka se pohybuje pouze o 1 Pole za Kolo, zatímco "
+"Azurový Drak může letět na jakékoli Pole na Desce Bojiště. \\end{itemize} "
+"\\item Azurový Drak je imunní vůči všem Kouzlům seslaným proti němu. \\item "
+"Posílení a vylepšení seslaná na Jednotky hráče zůstávají účinná. "
+"\\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:170
@@ -533,21 +533,20 @@ msgstr ""
 "\\begin{enumerate} \\item Umístěte miniaturu/kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda "
-"byli v předchozím Kole odstraněni nějací Golemové. Pokud ano, vyvolejte "
-"jednoho nového Diamantového nebo Zlatého Golema (vybraného náhodně) do "
-"poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
-"může žrát Golemy, aby si obnovil zdraví. Během svého tahu, pokud je "
-"Krystalový Drak vedle Golema, může se rozhodnout ho sežrat, čímž odstraní "
-"určité množství \\svg{damage-red} podle typu sežraného Golema: "
-"\\begin{itemize} \\item Zlatý Golem: Odstraňte 2 \\svg{damage-red}. \\item "
-"Diamantový Golem: Odstraňte 4 \\svg{damage-red}. \\item[] "
-"\\textbf{Poznámka:} Krystalový Drak může během svého tahu sežrat pouze "
-"jednoho Golema. \\end{itemize} \\item Schopnosti Golemů: Zlatí a Diamantoví "
-"Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
-"jejich kartách. Slouží především jako potrava pro regeneraci zdraví "
-"Krystalového Draka. \\item Krystalový Drak má \\textit{Odvetný útok dvakrát} "
-"za Kolo Boje. \\end{itemize} }"
+"\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda byli "
+"v předchozím Kole odstraněni nějací Golemové. Pokud ano, vyvolejte jednoho "
+"nového Diamantového nebo Zlatého Golema (vybraného náhodně) do poslední řady "
+"bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak může žrát Golemy, "
+"aby si obnovil zdraví. Během svého tahu, pokud je Krystalový Drak vedle "
+"Golema, může se rozhodnout ho sežrat, čímž odstraní určité množství "
+"\\svg{damage-red} podle typu sežraného Golema: \\begin{itemize} \\item Zlatý "
+"Golem: Odstraňte 2 \\svg{damage-red}. \\item Diamantový Golem: Odstraňte 4 "
+"\\svg{damage-red}. \\item[] \\textbf{Poznámka:} Krystalový Drak může během "
+"svého tahu sežrat pouze jednoho Golema. \\end{itemize} \\item Schopnosti "
+"Golemů: Zlatí a Diamantoví Golemové nemají žádné další schopnosti nad rámec "
+"těch, které jsou uvedeny na jejich kartách. Slouží především jako potrava "
+"pro regeneraci zdraví Krystalového Draka. \\item Krystalový Drak má "
+"\\textit{Odvetný útok dvakrát} za Kolo Boje. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:235
@@ -633,10 +632,10 @@ msgstr ""
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
 "základním Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
-"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte "
-"karty Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
-"Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. "
-"Označte Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
+"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte karty "
+"Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item Rezavý "
+"Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. Označte "
+"Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
 "umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
 "pouze na jedno Kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
 "\\item Pasivní schopnost Rezavého Draka, \\textit{Koroze}, snižuje brnění "
