--- a/translations/force_of_will.tex/force_of_will.tex.pot
+++ b/translations/force_of_will.tex/force_of_will.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-28 17:40+0200\n"
+"POT-Creation-Date: 2024-08-28 17:56+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,9 +31,18 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:26 coops/titans_stronghold.tex:27
+#: clash/force_of_will.tex:24 clash/the_hunt.tex:23
+#, no-wrap
+msgid ""
+"\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
 #: coops/emerald_island.tex:58 clash/bloody_grail.tex:64
-#: clash/force_of_will.tex:64 clash/the_hunt.tex:65
+#: clash/force_of_will.tex:62 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
 #: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
@@ -44,7 +53,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:91 clash/force_of_will.tex:76 clash/the_hunt.tex:72
+#: coops/sentinels.tex:91 clash/force_of_will.tex:74 clash/the_hunt.tex:72
 #: campaigns/inferno_devilish_plan.tex:148
 #: campaigns/inferno_steadwicks_fall.tex:188
 #: campaigns/inferno_deal_with_the_devil.tex:173
@@ -56,7 +65,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:39 coops/emerald_island.tex:36
-#: clash/bloody_grail.tex:33 clash/force_of_will.tex:37 clash/the_hunt.tex:35
+#: clash/bloody_grail.tex:33 clash/force_of_will.tex:35 clash/the_hunt.tex:35
 #: clash/dragoncurse_castle.tex:38
 #, no-wrap
 msgid ""
@@ -66,10 +75,27 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:32 clash/bloody_grail.tex:29
-#: clash/force_of_will.tex:33 clash/dragoncurse_castle.tex:34
+#: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: clash/bloody_grail.tex:36 clash/force_of_will.tex:38
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: clash/bloody_grail.tex:80 clash/force_of_will.tex:76 clash/the_hunt.tex:81
+#, no-wrap
+msgid ""
+"During this Scenario:\n"
 "\n"
 msgstr ""
 
@@ -112,7 +138,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
-"This scenario is played over 12 rounds.\n"
+"This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
 
@@ -126,99 +152,80 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:23
+#: clash/force_of_will.tex:22
 #, no-wrap
 msgid ""
-"\\textbf{Starting Resources:}\\par\n"
-"\\resources{15}{2}{1}\n"
+"\\textbf{Starting Resources:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:26
-#, no-wrap
-msgid ""
-"\\textbf{Starting Income:}\\par\n"
-"\\resources{10}{2}{1}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/force_of_will.tex:31
+#: clash/force_of_will.tex:29
 #, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Few \\svgunit{bronze} units with the \\textit{highest} Recruitment cost\n"
+"  \\item 2 × Few \\svgunit{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:35
+#: clash/force_of_will.tex:33 clash/the_hunt.tex:33
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} Each player takes 1 random Far (II--III) Map tile\n"
+"\\textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:40
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Map Setup}}\n"
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/force_of_will.tex:48
+#: clash/force_of_will.tex:46
 #, no-wrap
 msgid ""
 "\\textbf{For a 2-player scenario:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Starting (I) Map tile\n"
-"  \\item 2 × Near (IV--V) Map tile\n"
-"  \\item 4 × Far (II--III) Map tile\n"
-"  \\item 1 × Center (VI--VII) Map tile, which must contain the Dragon Utopia field\n"
+"  \\item 2 × Starting (I) Map Tile\n"
+"  \\item 2 × Near (IV--V) Map Tile\n"
+"  \\item 4 × Far (II--III) Map Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:56
+#: clash/force_of_will.tex:54
 #, no-wrap
 msgid ""
 "\\textbf{For a 4-player scenario:}\n"
 "\\begin{itemize}\n"
-"  \\item 3 × Starting (I) Map tile\n"
-"  \\item 3 × Near (IV--V) Map tile\n"
-"  \\item 6 × Far (II--III) Map tile\n"
-"  \\item 1 × Center (VI--VII) Map tile, which must contain the Dragon Utopia field\n"
+"  \\item 3 × Starting (I) Map Tile\n"
+"  \\item 3 × Near (IV--V) Map Tile\n"
+"  \\item 6 × Far (II--III) Map Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:59
+#: clash/force_of_will.tex:57
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-"To win the scenario, a Hero must Flag the Dragon Utopia field.\n"
+"To win the Scenario, a Hero must Flag the Dragon Utopia Field.\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:62
+#: clash/force_of_will.tex:60
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"At the end of the \\nth{12} Round, if there is no winner, all players lose the scenario.\n"
+"At the end of the \\nth{12} Round, if there is no winner, all players lose the Scenario.\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:69
+#: clash/force_of_will.tex:67
 #, no-wrap
 msgid ""
 "\\textbf{\\nth{4} and \\nth{8} Rounds:}\n"
@@ -229,10 +236,10 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:74
+#: clash/force_of_will.tex:72
 #, no-wrap
 msgid ""
-"\\textbf{(2-P Scenario Only) \\nth{5} and \\nth{9} Rounds:}\n"
+"\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
 "  \\item The second player gains 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
@@ -240,38 +247,30 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:78
-#, no-wrap
-msgid ""
-"During this scenario:\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/force_of_will.tex:95
+#: clash/force_of_will.tex:93
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
-"  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia field.\n"
-"  \\item When a Hero moves to the Dragon Utopia field, they must fight, depending on chosen difficulty, the following number of Neutral units:\n"
-"  \\begin{itemize}[leftmargin=15pt]\n"
+"  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.\n"
+"  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
+"  \\begin{itemize}\n"
 "    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
 "    \\item \\textbf{Normal:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
 "    \\item \\textbf{Hard:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
 "    \\item \\textbf{Impossible:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
 "  \\end{itemize}\n"
-"  \\item Follow these steps when Combat begins against Neutral units at the Dragon Utopia:\n"
-"  \\begin{itemize}[leftmargin=15pt]\n"
-"    \\item Place up to 4 of your unit cards freely onto the center row of the Combat board.\n"
-"    \\item The enemy player controlling the Neutral units places each Neutral unit in each of the 4 corners of the Combat board.\n"
+"  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
+"  \\begin{itemize}\n"
+"    \\item Place up to 4 of your unit cards freely onto the center row of the Combat Board.\n"
+"    \\item The enemy player controlling the Neutral Units places each Neutral unit in each of the 4 corners of the Combat Board.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:103
+#: clash/force_of_will.tex:101
 #, no-wrap
 msgid ""
 "\\begin{tikzpicture}[overlay]\n"
