--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 17:40+0200\n"
+"POT-Creation-Date: 2024-08-28 17:56+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -33,9 +33,20 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:26 coops/titans_stronghold.tex:27
+#: clash/force_of_will.tex:24 clash/the_hunt.tex:23
+#, no-wrap
+msgid ""
+"\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
+msgstr ""
+"\\textbf{Początkowy Przychód:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
+
+#. type: multicols*
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
 #: coops/emerald_island.tex:58 clash/bloody_grail.tex:64
-#: clash/force_of_will.tex:64 clash/the_hunt.tex:65
+#: clash/force_of_will.tex:62 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
 #: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
@@ -48,7 +59,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:91 clash/force_of_will.tex:76 clash/the_hunt.tex:72
+#: coops/sentinels.tex:91 clash/force_of_will.tex:74 clash/the_hunt.tex:72
 #: campaigns/inferno_devilish_plan.tex:148
 #: campaigns/inferno_steadwicks_fall.tex:188
 #: campaigns/inferno_deal_with_the_devil.tex:173
@@ -62,7 +73,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:39 coops/emerald_island.tex:36
-#: clash/bloody_grail.tex:33 clash/force_of_will.tex:37 clash/the_hunt.tex:35
+#: clash/bloody_grail.tex:33 clash/force_of_will.tex:35 clash/the_hunt.tex:35
 #: clash/dragoncurse_castle.tex:38
 #, no-wrap
 msgid ""
@@ -74,13 +85,35 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:32 clash/bloody_grail.tex:29
-#: clash/force_of_will.tex:33 clash/dragoncurse_castle.tex:34
+#: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
 "\n"
 msgstr ""
 "\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko\n"
+"\n"
+
+#. type: multicols*
+#: clash/bloody_grail.tex:36 clash/force_of_will.tex:38
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
+"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy Scenariusza:\n"
+"\n"
+
+#. type: multicols*
+#: clash/bloody_grail.tex:80 clash/force_of_will.tex:76 clash/the_hunt.tex:81
+#, no-wrap
+msgid ""
+"During this Scenario:\n"
+"\n"
+msgstr ""
+"Podczas tego Scenariusza:\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -139,7 +172,7 @@ msgstr ""
 #| "\n"
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
-"This scenario is played over 12 rounds.\n"
+"This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
@@ -159,25 +192,20 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:23
-#, no-wrap
+#: clash/force_of_will.tex:22
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Starting Resources:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+#| "\n"
 msgid ""
-"\\textbf{Starting Resources:}\\par\n"
-"\\resources{15}{2}{1}\n"
+"\\textbf{Starting Resources:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-
-#. type: multicols*
-#: clash/force_of_will.tex:26
-#, no-wrap
-msgid ""
-"\\textbf{Starting Income:}\\par\n"
-"\\resources{10}{2}{1}\n"
+"\\textbf{Zasoby Początkowe:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
-msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:31
+#: clash/force_of_will.tex:29
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\textbf{Starting Units:}\n"
@@ -188,7 +216,7 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Few \\svgunit{bronze} units with the \\textit{highest} Recruitment cost\n"
+"  \\item 2 × Few \\svgunit{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -199,36 +227,17 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:35
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile\n"
-#| "\n"
+#: clash/force_of_will.tex:33 clash/the_hunt.tex:33
+#, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} Each player takes 1 random Far (II--III) Map tile\n"
+"\\textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile\n"
 "\n"
 msgstr ""
 "\\textbf{Pula Kafelków Mapy:} Każdy gracz losuje 1 Daleki (II--III) Kafelek Mapy\n"
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:40
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Map Setup}}\n"
-#| "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
-#| "\n"
-msgid ""
-"\\subsection*{\\MakeUppercase{Map Setup}}\n"
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
-"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy Scenariusza:\n"
-"\n"
-
-#. type: multicols*
-#: clash/force_of_will.tex:48
+#: clash/force_of_will.tex:46
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\textbf{For a 2-player Scenario:}\n"
@@ -242,10 +251,10 @@ msgstr ""
 msgid ""
 "\\textbf{For a 2-player scenario:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Starting (I) Map tile\n"
-"  \\item 2 × Near (IV--V) Map tile\n"
-"  \\item 4 × Far (II--III) Map tile\n"
-"  \\item 1 × Center (VI--VII) Map tile, which must contain the Dragon Utopia field\n"
+"  \\item 2 × Starting (I) Map Tile\n"
+"  \\item 2 × Near (IV--V) Map Tile\n"
+"  \\item 4 × Far (II--III) Map Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -259,7 +268,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:56
+#: clash/force_of_will.tex:54
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\textbf{For a 4-player Scenario:}\n"
@@ -273,10 +282,10 @@ msgstr ""
 msgid ""
 "\\textbf{For a 4-player scenario:}\n"
 "\\begin{itemize}\n"
-"  \\item 3 × Starting (I) Map tile\n"
-"  \\item 3 × Near (IV--V) Map tile\n"
-"  \\item 6 × Far (II--III) Map tile\n"
-"  \\item 1 × Center (VI--VII) Map tile, which must contain the Dragon Utopia field\n"
+"  \\item 3 × Starting (I) Map Tile\n"
+"  \\item 3 × Near (IV--V) Map Tile\n"
+"  \\item 6 × Far (II--III) Map Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -290,7 +299,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:59
+#: clash/force_of_will.tex:57
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
@@ -298,7 +307,7 @@ msgstr ""
 #| "\n"
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-"To win the scenario, a Hero must Flag the Dragon Utopia field.\n"
+"To win the Scenario, a Hero must Flag the Dragon Utopia Field.\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Warunki Zwycięstwa}}\n"
@@ -306,7 +315,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:62
+#: clash/force_of_will.tex:60
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
@@ -314,7 +323,7 @@ msgstr ""
 #| "\n"
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"At the end of the \\nth{12} Round, if there is no winner, all players lose the scenario.\n"
+"At the end of the \\nth{12} Round, if there is no winner, all players lose the Scenario.\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Warunki Przegranej}}\n"
@@ -322,7 +331,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:69
+#: clash/force_of_will.tex:67
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
@@ -344,7 +353,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:74
+#: clash/force_of_will.tex:72
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\textbf{\\nth{7} and \\nth{8} Rounds:}\n"
@@ -353,7 +362,7 @@ msgstr ""
 #| "\\end{itemize}\n"
 #| "\n"
 msgid ""
-"\\textbf{(2-P Scenario Only) \\nth{5} and \\nth{9} Rounds:}\n"
+"\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
 "  \\item The second player gains 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
@@ -365,43 +374,30 @@ msgstr ""
 "\\end{itemize}\n"
 
 #. type: multicols*
-#: clash/force_of_will.tex:78
-#, fuzzy, no-wrap
-#| msgid ""
-#| "During this Scenario:\n"
-#| "\n"
-msgid ""
-"During this scenario:\n"
-"\n"
-msgstr ""
-"Podczas tego Scenariusza:\n"
-"\n"
-
-#. type: multicols*
-#: clash/force_of_will.tex:95
+#: clash/force_of_will.tex:93
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
-"  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia field.\n"
-"  \\item When a Hero moves to the Dragon Utopia field, they must fight, depending on chosen difficulty, the following number of Neutral units:\n"
-"  \\begin{itemize}[leftmargin=15pt]\n"
+"  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.\n"
+"  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
+"  \\begin{itemize}\n"
 "    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
 "    \\item \\textbf{Normal:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
 "    \\item \\textbf{Hard:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
 "    \\item \\textbf{Impossible:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
 "  \\end{itemize}\n"
-"  \\item Follow these steps when Combat begins against Neutral units at the Dragon Utopia:\n"
-"  \\begin{itemize}[leftmargin=15pt]\n"
-"    \\item Place up to 4 of your unit cards freely onto the center row of the Combat board.\n"
-"    \\item The enemy player controlling the Neutral units places each Neutral unit in each of the 4 corners of the Combat board.\n"
+"  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
+"  \\begin{itemize}\n"
+"    \\item Place up to 4 of your unit cards freely onto the center row of the Combat Board.\n"
+"    \\item The enemy player controlling the Neutral Units places each Neutral unit in each of the 4 corners of the Combat Board.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
-#: clash/force_of_will.tex:103
+#: clash/force_of_will.tex:101
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\begin{tikzpicture}[overlay]\n"
