Layout + po4a update

--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -93,10 +93,10 @@ During this Scenario:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14, 6.5) {\includegraphics[width=0.4\linewidth]{\_assets/maps/force-of-will-2p.png}};
-  \node at (14, 0.5) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (7, -6) {\includegraphics[width=0.4\linewidth]{\_assets/maps/force-of-will-3p.png}};
-  \node at (7, -11.8) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+  \node at (14, 4) {\includegraphics[width=\linewidth]{\_assets/maps/force-of-will-2p.png}};
+  \node at (14, -3) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  \node at (7, -7) {\includegraphics[width=1.35\linewidth]{\_assets/maps/force-of-will-3p.png}};
+  \node at (7, -13.5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
 \end{tikzpicture}
 
 \end{multicols*}
