--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 17:56+0200\n"
+"POT-Creation-Date: 2024-08-28 18:16+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -410,10 +410,10 @@ msgstr ""
 msgid ""
 "\\begin{tikzpicture}[overlay]\n"
 "  \\centering\n"
-"  \\node at (14, 6.5) {\\includegraphics[width=0.8\\linewidth]{\\_assets/maps/force-of-will-2p.png}};\n"
-"  \\node at (14, 0.5) {\\footnotesize{\\textbf{\\MakeUppercase{2-PLAYER SCENARIO}}}};\n"
-"  \\node at (7, -6) {\\includegraphics[width=1.05\\linewidth]{\\_assets/maps/force-of-will-3p.png}};\n"
-"  \\node at (7, -11.8) {\\footnotesize{\\textbf{\\MakeUppercase{3-PLAYER SCENARIO}}}};\n"
+"  \\node at (14, 4) {\\includegraphics[width=\\linewidth]{\\_assets/maps/force-of-will-2p.png}};\n"
+"  \\node at (14, -3) {\\footnotesize{\\textbf{\\MakeUppercase{2-PLAYER SCENARIO}}}};\n"
+"  \\node at (7, -7) {\\includegraphics[width=1.35\\linewidth]{\\_assets/maps/force-of-will-3p.png}};\n"
+"  \\node at (7, -13.5) {\\footnotesize{\\textbf{\\MakeUppercase{3-PLAYER SCENARIO}}}};\n"
 "\\end{tikzpicture}\n"
 "\n"
 msgstr ""
